--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
         "test": "jest",
         "start": "node examples/examples.js"
     },
+    "keywords": ["weather", "sdk", "simple"],
+    "author": " Naveen Pandian",
+    "license": "MIT",
+    "dependencies": {
+        "axios": "^1.6.2"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0"
+    }
+    
 
 }
